[package]
name = "serai-coordinator"
version = "0.1.0"
description = "Serai coordinator to prepare batches and sign transactions"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/coordinator"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
lazy_static = "1"

zeroize = "^1.5"
rand_core = "0.6"

blake2 = "0.10"

transcript = { package = "flexible-transcript", path = "../crypto/transcript", features = ["recommended"] }
ciphersuite = { path = "../crypto/ciphersuite" }
schnorr = { package = "schnorr-signatures", path = "../crypto/schnorr" }
frost = { package = "modular-frost", path = "../crypto/frost" }

scale = { package = "parity-scale-codec", version = "3", features = ["derive"] }

sp-application-crypto = { git = "https://github.com/serai-dex/substrate", default-features = false }

serai-db = { path = "../common/db", features = ["rocksdb"] }
serai-env = { path = "../common/env" }

processor-messages = { package = "serai-processor-messages", path = "../processor/messages" }
message-queue = { package = "serai-message-queue", path = "../message-queue" }
tributary = { package = "tributary-chain", path = "./tributary" }

serai-client = { path = "../substrate/client", features = ["serai"] }

hex = "0.4"
serde_json = { version = "1", default-features = false }
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
futures = "0.3"
tributary = { package = "tributary-chain", path = "./tributary", features = ["tests"] }
