[package]
name = "serai-message-queue"
version = "0.1.0"
description = "A message queue for Serai focused on consistency"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/message-queue"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Macros
lazy_static = "1"
serde = { version = "1", features = ["derive"] }

# Encoders
hex = "0.4"
bincode = "1"
serde_json = "1"

# Libs
zeroize = "1"
rand_core = "0.6"

# Cryptography
transcript = { package = "flexible-transcript", path = "../crypto/transcript", features = ["recommended"] }
ciphersuite = { path = "../crypto/ciphersuite", features = ["ristretto"] }
schnorr-signatures = { path = "../crypto/schnorr" }

# Application
log = "0.4"
env_logger = "0.10"

tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

serai-db = { path = "../common/db", optional = true }

serai-env = { path = "../common/env" }

serai-primitives = { path = "../substrate/primitives" }

jsonrpsee = { version = "0.16", features = ["server"], optional = true }
reqwest = { version = "0.11", features = ["json"] }

[features]
binaries = ["serai-db", "serai-db/rocksdb", "jsonrpsee"]
