[package]
name = "serai-message-queue"
version = "0.1.0"
description = "A message queue for Serai focused on consistency"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/message-queue"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Macros
once_cell = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["std", "derive"] }

# Encoders
hex = { version = "0.4", default-features = false, features = ["std"] }
bincode = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

# Libs
zeroize = { version = "1", default-features = false, features = ["std"] }
rand_core = { version = "0.6", default-features = false, features = ["std"] }

# Cryptography
transcript = { package = "flexible-transcript", path = "../crypto/transcript", default-features = false, features = ["std", "recommended"] }
ciphersuite = { path = "../crypto/ciphersuite", default-features = false, features = ["std", "ristretto"] }
schnorr-signatures = { path = "../crypto/schnorr", default-features = false, features = ["std"] }

# Application
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }

# Uses a single threaded runtime since this shouldn't ever be CPU-bound
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros"] }

serai-db = { path = "../common/db", optional = true }

serai-env = { path = "../common/env" }

serai-primitives = { path = "../substrate/primitives" }

jsonrpsee = { version = "0.16", default-features = false, features = ["server"], optional = true }
simple-request = { path = "../common/request", default-features = false }

[features]
binaries = ["serai-db", "serai-db/rocksdb", "jsonrpsee"]
